roles/gen3/templates/revproxy.yaml
kind: Service
apiVersion: v1
metadata:
  name: revproxy-service2
spec:
  selector:
    app: revproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
